{
    "name": "Player Controller",
    "maps": [
        {
            "name": "MovemenT",
            "id": "1178a78c-c3a9-4d93-a2e7-936dfe4b2796",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "f1191fa0-6826-4eb0-b77b-864249251844",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "978926f3-42b8-4370-bbcf-e59016421035",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5395e1fd-4707-4c09-bbcc-c9bee07013ac",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "16c9e664-7a31-43e3-9a4c-b7652b5471e5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ee505abd-1c41-4479-adc4-16e7671383d7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6cef7226-4799-4f9c-968c-d27ee00a6179",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Combat",
            "id": "ad85596f-d5e3-40ea-b6ff-4fec0f0d4362",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "1c054396-257b-44c8-8db7-7b4f992a6ac7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpecialAttack",
                    "type": "Button",
                    "id": "cfa37f15-7261-4eaa-b87e-4bfaa5379820",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6d088e74-ed5d-4e7c-96c0-02f5796d25dc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a206b01d-a19f-47d1-8e4b-9e31dee6f19d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "B",
            "id": "31802de1-fa6b-4436-8a07-cabdb41ec63c",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Value",
                    "id": "0db854e8-c277-46f8-b7be-8bc8bcd70bd8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OpenShop",
                    "type": "Value",
                    "id": "3d121964-0a3e-41d0-be91-738b15dc2b62",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0dea04c1-76d9-4c4c-bfbe-cd571fd2c1b1",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "def3c1e9-410c-4199-8d79-f7cad7802904",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenShop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}